--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/member/memberLogin.jsp=UTF-8
+encoding//src/main/webapp/study/study2.jsp=UTF-8
+encoding//src/main/webapp/study/youtube.jsp=UTF-8
 encoding/<project>=UTF-8
